app/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: ecommerce-app
spec:
  selector:
    app: frontend
  ports:
    - name: frontend
      protocol: TCP
      port: 80
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: ecommerce-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/cnd2425/frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
