app/inventory-service.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: ecommerce-app
spec:
  selector:
    app: inventory-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  namespace: ecommerce-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
    spec:
      containers:
      - name: inventory-service
        image: ghcr.io/cnd2425/inventory-service:latest
        ports:
        - containerPort: 8080
