app/product-service.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: ecommerce-app
spec:
  selector:
    app: product-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: ecommerce-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
      - name: product-service
        image: ghcr.io/cnd2425/product-service:latest
        ports:
        - containerPort: 8080
