app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: ecommerce-app
spec:
  rules:
    - host: ecme
      http:
        paths:
          - path: /api/product
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 8080
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
#  ingressClassName: nginx

#---
#apiVersion: networking.k8s.io/v1
#kind: IngressClass
#metadata:
#  name: nginx
#  namespace: ecommerce-app
#spec:
#  controller: k8s.io/ingress-nginx
